--- a/package.json
+++ b/package.json
@@ -16,13 +16,13 @@
     "@types/react-router-dom": "^5.1.8",
     "axios": "^0.21.1",
     "date-fns": "^2.23.0",
+    "firebase": "^9.0.2",
     "ramda": "^0.27.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
-    "typescript": "^4.3.5",
-    "firebase": "^9.0.2"
+    "typescript": "^4.3.5"
   },
   "scripts": {
     "start": "cross-env DISABLE_ESLINT_PLUGIN=true TSC_COMPILE_ON_ERROR=true react-scripts start",
